	PR c++/18071 	* tree.h (DECL_INLINE): remove. 	(DECL_DECLARED_INLINE_P): Update docs. 	(DECL_NO_INLINE_WARNING_P): new. 	(tree_function_decl): Replace inline_flag by no_inline_warning_flag. 	* tree-inline.c (inlinable_function_p): Set DECL_NO_INLINE_WARNING_P.

Java:
	* class.c (add_method_1): Do not initialize DECL_INLINE.
	(make_local_function_alias): Likewise.
	* expr.c (rewrite_arglist_getcaller): Set DECL_UNINLINABLE.
	* lang.c (java_decl_ok_for_sibcall): Use DECL_UNINLINABLE.

	Objc:
	* objc/objc-act.c (objc_finish_method_definition): Do not set DECL_INLINE.
	
	C++:
	* cp/decl.c (start_method): Set DECL_NO_INLINE_WARNING_P.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@140418 138bc75d-0d04-0410-961f-82ee72b054a4